# rff-light-fw

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/arm/rff-light-alarm-v0/: Kconfig.board  Kconfig.defconfig  pinmux.c  rff_light_alarm_v0.dts  rff_light_alarm_v0.yaml  rff_light_alarm_v0_defconfig  stm32_min_dev.dtsi
boards/arm/rff-light-alarm-v0/doc/: README
src/: alarm-params.h  brightness-ops.h  button-ctl.c  button-ctl.h  dynamic-assert.h  lamp-params.h  main.c  main.c.back  status-led-ctl.c  status-led-ctl.h
src/brightness-model/: brightness-model.c  brightness-model.h  brightness-unified-model.c  brightness-unified-model.h
src/bt/: bt-hm11-ctl.c  bt-hm11-ctl.h
src/core-model/: README  core-model.c  core-model.h  model-cross-test.c
src/pwm/: tim3-pwm.c  tim3-pwm.h
src/rtc/: rtc-ctl.c  rtc-ctl.h
